--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,15 @@ img {
     max-width: 100%;
 }
 
+figure {
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    cursor: pointer;
+}
+
 /* * {
     border: 1px solid red;
 } */
@@ -53,70 +62,76 @@ p {
 /* 3. Header & Navigation
 ======================================== */
 
+.header {
+    background-color: #e9d8a6;
+}
+
 header {
-    padding: 25px;
-    background-color: #F25F5C;
-    display: flex;
-    justify-content: space-between;
-    flex-flow: row wrap;
+    padding: 1rem;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-header h1 {
-    margin: 0;
-    color: white;
-    font-size: 36px;
-}
-
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
+    padding: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    /* align-items: space-between; */
 }
-  
-li {
-    display: inline-block;
-    margin-left: 25px;
+
+/* nav li:first-child {
+    margin-right: auto;
+} */
+
+nav li {
+    flex-basis: 48%;
+    margin-bottom: 0.5rem;
+    font-family: 'Roboto', Arial, sans-serif;
+}
+
+nav li:first-child {
+    flex-basis: 100%;
     text-align: center;
-    background-color: #28587B; 
-    border-radius: 5px;
 }
-  
-a {
-    display: inline-block;
-    width: 150px;
-    padding: 10px 0;
+
+nav a {
     text-decoration: none;
-    font-size: 24px;
+    font-size: 1.2rem;
     color: white;
-    text-shadow: 2px 2px 0 #bbbbbb;
+    background-color: red;
+    display: block;
+    padding: 0.5rem;
+    border-radius: 5px;
+    text-align: center;
+}
+
+nav li:first-child a {
+    color: black;
+    background-color: transparent;
+}
+
+nav a:hover {
+    background-color: black;
+    color: #e9d8a6;
 }
 
 /* 4. Page Structure
 ======================================== */
 
-.row {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    gap: 5%;
-}
-
 figure {
-    margin: 0;
-    padding: 0;
-    flex-basis: 30%;
-    display: flex;
-    flex-flow: column nowrap;
     position: relative;
 }
 
 figure > div {
     background-image: url('data:image/svg+xml,%3Csvg width="64" height="64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z" fill="%239C92AC" fill-opacity="0.4" fill-rule="evenodd"/%3E%3C/svg%3E');
     min-height: 300px;
-    min-width: 300px;
 }
 
 figcaption {
-    background-color: #00121970; /* Added Transparency  */
+    background-color: #00121970; /* Added Transparency - 70 */
     color: white;
     padding: 1rem;
     position: absolute;
@@ -168,32 +183,69 @@ figcaption * {
 /* 7. Media Queries
 ======================================== */
 
-/* To be deleted */
-
-@media only screen and (max-width: 800px) {
-    h1 {
-        display: none;
-    }
-
-    li {
-        margin-right: 10px;
-    }
-    
-    a {
-        width: 100px;
-        padding: 5px 0;
-        font-size: 16px;
-    }
-}
-
 /* Tablet */
 
 @media only screen and (min-width: 550px) {
-    /**/
+    /* Navigation -  */
+    nav ul {
+        justify-content: center;
+        gap: 1.2em;
+    }
+
+    nav li {
+        flex-basis: auto;
+        margin-bottom: 0;
+    }
+
+    nav a {
+        color: black;
+        background-color: transparent;
+    }
+
+    .row {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        gap: 2%;
+    }
+
+    figure {
+        flex-basis: 49%;
+        display: flex;
+        flex-flow: column nowrap;
+    }
+
+    .main-fig {
+        flex-basis: 100%;
+    }
 }
 
 /* Desktop */
 
-@media only screen and (min-width: 850px) {
-    /**/
+@media only screen and (min-width: 800px) {
+    /* Navigation - logo in the  center */
+    nav ul {
+        justify-content: flex-end;
+    }
+
+    nav li:first-child {
+        flex-basis: auto;
+        margin: 0 auto;
+        order: 2;
+    }
+
+    nav li:nth-child(2),
+    nav li:nth-child(3) {
+        order: 1;
+    }
+
+    nav li:nth-child(4),
+    nav li:nth-child(5) {
+        order: 3;
+    }
+
+    figure,
+    .main-fig {
+        flex-basis: 32%;
+    }
 }
