--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,10 @@ figure {
     position: relative;
 }
 
+figure + figure {
+    margin-top: 0.75rem;
+}
+
 figure > div {
     background-image: url('data:image/svg+xml,%3Csvg width="64" height="64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z" fill="%239C92AC" fill-opacity="0.4" fill-rule="evenodd"/%3E%3C/svg%3E');
     min-height: 250px;
@@ -193,20 +197,18 @@ figcaption * {
     }
 
     .row {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
         gap: 2%;
     }
 
-    figure {
-        flex-basis: 49%;
-        display: flex;
-        flex-flow: column nowrap;
+    figure + figure {
+        margin-top: 0;
     }
 
     .main-fig {
-        flex-basis: 100%;
+        grid-column: span 2;
     }
 }
 
@@ -234,8 +236,13 @@ figcaption * {
         order: 3;
     }
 
-    figure,
+    .row {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        gap: 1.25%;
+    }
+
     .main-fig {
-        flex-basis: 32%;
+        grid-column: span 1;
     }
 }
