--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,18 @@ Learn more about responsive images at https://css-tricks.com/a-guide-to-the-resp
 
 */
 
+:root {
+    --white: #FFFFFF;
+    --black: #000000;
+    --base-size: 1rem;
+    --scale: 1.25;
+    --h6: calc(var(--base-size) * var(--scale));
+    --h5: calc(var(--h6) * var(--scale));
+    --h4: calc(var(--h5) * var(--scale));
+    --h3: calc(var(--h4) * var(--scale));
+    --h2: calc(var(--h3) * var(--scale));
+    --h1: calc(var(--h2) * var(--scale));
+}
 
 html {
     box-sizing: border-box;
@@ -44,10 +56,15 @@ html {
 body {
     padding: 0;
     margin: 0;
+    font-family: 'Lora', Georgia, serif;
+    font-weight: 400;
+    line-height: 1.6;
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
+    height: auto;
+    display: block;
 }
 
 figure {
@@ -67,14 +84,37 @@ a {
 /* 2. Typography
 ======================================== */
 
-h1, h2,
-h3, h4,
-h5, h6 {
-    font-family: 'Roboto', Arial, sans-serif;
+h1, h2, h3,
+h4, h5, h6 {
+    margin: 3rem 0 1.38rem;
+    font-family: 'Poppins', Arial, sans-serif;
+    font-weight: 400;
+    line-height: 1.15;
 }
 
-p {
-    font-family: 'Lora', Georgia, serif;
+h1 {
+    margin-top: 0;
+    font-size: var(--h1);
+}
+
+h2 {
+    font-size: var(--h2);
+}
+
+h3 {
+    font-size: var(--h3);
+}
+
+h4 {
+    font-size: var(--h4);
+}
+
+h5 {
+    font-size: var(--h5);
+}
+
+h6 {
+    font-size: var(--h6);
 }
 
 /* 3. Header & Navigation
@@ -102,7 +142,7 @@ nav ul {
 nav li {
     flex-basis: 48%;
     margin-bottom: 0.5rem;
-    font-family: 'Roboto', Arial, sans-serif;
+    font-family: 'Poppins', Arial, sans-serif;
 }
 
 nav li:first-child {
@@ -140,6 +180,10 @@ nav a:hover {
     margin: 0 auto;
 }
 
+.row {
+    margin-bottom: 1rem;
+}
+
 figure {
     position: relative;
 }
@@ -164,6 +208,10 @@ figcaption {
 
 figcaption * {
     margin: 0.5rem;
+}
+
+figcaption h2 {
+    font-size: var(--h5);
 }
 
 .one {
@@ -200,7 +248,8 @@ figcaption * {
 /* Tablet */
 
 @media only screen and (min-width: 550px) {
-    /* Navigation -  */
+    /* Navigation */
+
     nav ul {
         justify-content: center;
         gap: 1.2em;
@@ -236,6 +285,7 @@ figcaption * {
 
 @media only screen and (min-width: 800px) {
     /* Navigation - logo in the  center */
+
     nav ul {
         justify-content: flex-end;
     }
