Minor change to styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,8 +189,8 @@ nav a:hover {
 
 .wrapper {
   padding: 1rem;
-  max-width: 1200px;
-  min-width: 320px;
+  max-width: 75rem;
+  min-width: 20rem;
   margin: 0 auto;
 }
 
