--- a/css/styles.css
+++ b/css/styles.css
@@ -91,16 +91,16 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 3rem 0 1.38rem;
+  margin-top: 0;
   font-family: var(--heading-font);
-  font-weight: 500;
+  font-weight: 700;
   line-height: 1.15;
   letter-spacing: -0.022rem;
 }
 
 h1 {
-  margin-top: 0;
   font-size: var(--h1);
+  margin-bottom: 3.5rem;
 }
 
 h2 {
@@ -141,15 +141,11 @@ small,
 nav ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0.75rem 0;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
 }
-
-/* nav li:first-child {
-    margin-right: auto;
-} */
 
 nav li {
   flex-basis: 48%;
@@ -158,9 +154,17 @@ nav li {
   font-weight: 400;
 }
 
+/* nav li:first-child {
+    margin-right: auto;
+} */
+
 nav li:first-child {
   flex-basis: 100%;
   text-align: center;
+  & a {
+    color: black;
+    background-color: transparent;
+  }
 }
 
 nav a {
@@ -170,45 +174,67 @@ nav a {
   background-color: red;
   display: block;
   padding: 0.5rem;
-  border-radius: 5px;
+  border-radius: 0.75rem;
   text-align: center;
-}
-
-nav li:first-child a {
-  color: black;
-  background-color: transparent;
-}
-
-nav a:hover {
-  background-color: black;
-  color: #e9d8a6;
+  &:hover {
+    background-color: black;
+    color: #e9d8a6;
+  }
 }
 
 /* 4. Page Structure
 ======================================== */
 
 .wrapper {
-  padding: 1rem;
-  max-width: 75rem;
+  max-width: 73.5rem; /* 1176px */
   min-width: 20rem;
   margin: 0 auto;
+  padding: 0 1.5rem; /* 24px */
 }
 
-.row {
-  margin-bottom: 1rem;
+.button {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  font-family: var(--heading-font);
+  font-size: 1.2rem;
+  color: var(--black);
+  font-weight: 500;
+  background-color: lightgray;
+  width: 168px;
+  height: 48px;
+  border-radius: 8px;
+  padding-top: 0.6rem;
+}
+
+.hollow {
+  background-color: var(--white);
+  border: 1px solid var(--black);
+}
+
+.divider {
+  background-color: var(--black);
+  height: 4px;
+  margin: 2rem 0;
+}
+
+.projects {
+  margin-bottom: 2rem;
 }
 
 figure {
   position: relative;
+  border-radius: 16px;
+  overflow: hidden;
 }
 
-figure + figure {
-  margin-top: 0.75rem;
-}
+/* figure + figure {
+  margin-top: 1.5rem;
+} */
 
 figure > div {
   background-image: url('data:image/svg+xml,%3Csvg width="64" height="64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z" fill="%239C92AC" fill-opacity="0.4" fill-rule="evenodd"/%3E%3C/svg%3E');
-  min-height: 250px;
+  min-height: 264px;
 }
 
 figcaption {
@@ -238,6 +264,24 @@ figcaption h2 {
 
 .three {
   background-color: #ee9b00;
+}
+
+.four {
+  background-color: #ee9b00;
+}
+
+#contact {
+  text-align: center;
+}
+
+.services h2 {
+  text-align: center;
+}
+
+.icon [class*="fa-"] {
+  width: 100%;
+  text-align: center;
+  font-size: var(--h2);
 }
 
 /* 5. Footer
@@ -277,7 +321,7 @@ figcaption h2 {
     background-color: transparent;
   }
 
-  .row {
+  /* .row {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -290,7 +334,7 @@ figcaption h2 {
 
   .main-fig {
     grid-column: span 2;
-  }
+  } */
 }
 
 /* Desktop */
@@ -318,13 +362,105 @@ figcaption h2 {
     order: 3;
   }
 
-  .row {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-    gap: 1.25%;
+  .hero {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1.5rem;
+    margin: 4rem 0;
   }
 
-  .main-fig {
-    grid-column: span 1;
+  .hero h1 {
+    margin-bottom: 1.5rem;
+  }
+
+  .hero-txt {
+    grid-column: span 6 / span 6;
+    grid-row: span 3 / span 3;
+  }
+
+  .hero-txt h1 {
+    width: 90%;
+    margin-top: 1rem;
+  }
+
+  .hero-img {
+    grid-column: span 6 / span 6;
+    grid-row: span 3 / span 3;
+    grid-column-start: 7;
+    background-color: lightgray;
+  }
+
+  .button + .button {
+    margin-left: 1.5rem;
+  }
+
+  .projects {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
+    gap: 1.5rem;
+  }
+
+  .pro-1 {
+    grid-column: span 3 / span 3;
+  }
+
+  .pro-2 {
+    grid-column: span 3 / span 3;
+    grid-column-start: 4;
+  }
+
+  .pro-3 {
+    grid-column: span 3 / span 3;
+    grid-column-start: 7;
+  }
+
+  .pro-4 {
+    grid-column: span 3 / span 3;
+    grid-column-start: 10;
+  }
+
+  .about {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1.5rem;
+  }
+
+  .about-img {
+    grid-column: span 6 / span 6;
+    grid-row: span 3 / span 3;
+    background-color: lightgray;
+  }
+
+  .about-txt {
+    grid-column: span 6 / span 6;
+    grid-row: span 2 / span 2;
+    grid-column-start: 7;
+  }
+
+  .services {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1.5rem;
+  }
+
+  .branding {
+    grid-column: span 4 / span 4;
+    grid-row: span 2 / span 2;
+  }
+
+  .art {
+    grid-column: span 4 / span 4;
+    grid-row: span 2 / span 2;
+    grid-column-start: 5;
+  }
+
+  .website {
+    grid-column: span 4 / span 4;
+    grid-row: span 2 / span 2;
+    grid-column-start: 9;
   }
 }
